--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,24 @@ main {
 .flex-container {
     display: flex;
 }
+
+.column {
+    flex-direction: column;
+}
+
+.row {
+    flex-direction: row;
+}
+
+.center {
+    justify-content: center;
+    align-items: center;
+}
+
+.align-center {
+    align-items: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
