Change the background color

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ body,
 main {
     width: 100%;
     flex: 1;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(34, 133, 245, 0.05);
 }
 
 .flex-container {
