--- a/src/features/auth/signup/Signup.css
+++ b/src/features/auth/signup/Signup.css
@@ -2,3 +2,19 @@
     width: 100%;
     height: 100%;
 }
+
+.signup .card {
+    width: 40%;
+}
+
+@media (max-width: 1000px) {
+    .signup .card {
+        width: 60%;
+    }
+}
+
+@media (max-width: 700px) {
+    .signup .card {
+        width: 75%;
+    }
+}
