Align the text of the p tag in the center

--- a/src/features/auth/signup/Signup.css
+++ b/src/features/auth/signup/Signup.css
@@ -7,6 +7,10 @@
     width: 40%;
 }
 
+.signup p {
+    text-align: center;
+}
+
 @media (max-width: 1200px) {
     .signup__card {
         width: 60%;
