--- a/src/features/auth/signup/Signup.css
+++ b/src/features/auth/signup/Signup.css
@@ -1,13 +1,20 @@
+.signup__card {
+    width: 40%;
+    padding: 40px;
+}
+
 .signup {
     width: 100%;
     height: 100%;
 }
 
-.signup__card {
-    width: 40%;
+.signup h2 {
+    font-size: 36px;
+    line-height: 36px;
 }
 
 .signup p {
+    margin-top: 18px;
     text-align: center;
 }
 
