--- a/src/components/input/Input.css
+++ b/src/components/input/Input.css
@@ -2,7 +2,7 @@
     padding: 10px 0px;
 }
 
-input {
+.input-container input {
     margin-top: 3px;
     width: 100%;
     height: 40px;
@@ -12,12 +12,12 @@ input {
     font-size: 14px;
 }
 
-input:focus {
+.input-container input:focus {
     outline: none;
     box-shadow: 0px 0px 0px 3.5px rgba(34, 133, 245, 0.3);
     border: 2px solid rgb(34, 133, 245);
 }
 
-label {
+.input-container label {
     font-size: 16px;
 }
