Change the cursor to pointer when we hover over button elements

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,10 @@ main {
     background-color: rgba(34, 133, 245, 0.05);
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 .flex-container {
     display: flex;
 }
