Add styles of max-width and max-height class names

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,14 @@ button:hover {
     cursor: pointer;
 }
 
+.max-width {
+    width: 100%;
+}
+
+.max-height {
+    height: 100%;
+}
+
 .flex-container {
     display: flex;
 }
