--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -20,6 +20,7 @@
     opacity: 0.85;
 }
 
-.button-container button:active {
+.button-container button:active,
+.button-container button:disabled {
     opacity: 0.6;
 }
