--- a/src/features/auth/form/Form.css
+++ b/src/features/auth/form/Form.css
@@ -4,8 +4,11 @@
 }
 
 .form p {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.form .description {
     margin-top: 18px;
     margin-bottom: 10px;
     text-align: center;
-    color: rgba(0, 0, 0, 0.6);
 }
