--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,12 @@ main {
     background-color: rgba(34, 133, 245, 0.05);
 }
 
-button:hover {
+a {
+    color: rgb(34, 133, 245);
+}
+
+button:hover,
+a:hover {
     cursor: pointer;
 }
 
